Change scroll bug in settings on mobile

--- a/components/Profile/ProfileInfo.module.scss
+++ b/components/Profile/ProfileInfo.module.scss
@@ -9,7 +9,7 @@
         flex-direction: row;
         align-items: center;
         font-size: 21px;
-        margin: 13px 15px;
+        margin: 10px 15px;
         h3 {
           max-width: 95%;
           font-weight: 400;
